kubernetes/04-host-sim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host-sim
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: host-sim
  template:
    metadata:
      labels:
        app: host-sim
    spec:
      containers:
        - name: zabbix-agent
          image: zabbix/zabbix-agent2:alpine-latest
          ports:
            - containerPort: 10050
              name: agent-port
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: agent-config-volume
              mountPath: /etc/zabbix/zabbix_agent2.conf
              subPath: zabbix_agent2.conf

        - name: ids-suricata
          image: stasiuwa/networkmonitoring-host-sim:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
      volumes:
        - name: agent-config-volume
          configMap:
            name: zabbix-agent-config
            items:
              - key: zabbix_agent2.conf
                path: zabbix_agent2.conf
---
apiVersion: v1
kind: Service
metadata:
  name: host-sim
  namespace: monitoring
spec:
  ports:
    - port: 10050
      targetPort: 10050
      name: zabbix-agent
  selector:
    app: host-sim
